# hawa-be

./: .gitignore  PyWhatKit_DB.txt  pyproject.toml
app/: main.py
app/api/: admin.py  auth.py  weather.py
app/core/: config.py  dependencies.py  exceptions.py  privacy.py  security.py
app/db/: postgres.py
app/db/models/: user.py
app/services/auth/: schemas.py  service.py
app/services/notification/: __init__.py
app/services/weather/: __init__.py  groq_heatmap_tips_service.py  groq_service.py  heatmap_processor.py  recommendation_service.py  schemas.py  sheets_cache_service.py  spreadsheet_service.py
scripts/: create_admin.py  fix_language_enum.py  generate_encryption_key.py  migrate_add_personalization.py  send_whatsapp_warnings.py  setup_vector_db.py
