[tool.poetry]
name = "hawa-be"
version = "0.1.0"
description = "FastAPI backend (auth + Postgres)"
authors = ["Arya <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.123.0"
uvicorn = {version = "0.38.0", extras = ["standard"]}
SQLAlchemy = "2.0.44"
psycopg = {version = "3.2.13", extras = ["binary"]}
python-jose = "3.5.0"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pydantic = {extras = ["email"], version = "^2.12.5"}
python-dotenv = "1.2.1"
# httpx = "0.27.2"  # tambahkan nanti kalau perlu

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
ruff = "0.6.9"
mypy = "1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
